# docker-prune-plan

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docker_prune_plan/: cli.py
docker_prune_plan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
