[project]
name = "docker-prune-plan"
version = "0.1.3"
description = "Dry-run view of what docker system prune would delete"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["docker>=7.0.0"]
authors = [
    {name = "Abdul Wahab", email = "abdulwahabmangat@gmail.com"}
]
license = {text = "MIT"}

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/wahabmangat/docker-prune-plan"
Repository = "https://github.com/wahabmangat/docker-prune-plan"
Issues = "https://github.com/wahabmangat/docker-prune-plan/issues"

[project.scripts]
docker-prune-plan = "docker_prune_plan.cli:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]